# noble-gas-liquid

./: README.md
core/: CMakeLists.txt  main_core.cc
core/datawithcore/: Lar-energytransfer.txt  Lar-momentumtransfer.txt  Lkr-energytransfer.txt  Lkr-momentumtransfer.txt  Lne-energytransfer.txt  Lne-momentumtransfer.txt  Lxe-energytransfer.txt  Lxe-energytransfer2.txt  Lxe-momentumtransfer.txt  Lxe-momentumtransfer2.txt
core/datawithcore/ne-excitation/: 16.618.txt  16.67.txt  16.715.txt  16.857.txt  18.381.txt  18.965.txt  19.663.txt  20.033.txt  20.2.txt
core/include/: constantdata.h  constantdataforliquid.h
core/src/: constantdata.cc  constantdataforliquid.cc  main.cc
